Fix position of infocard on small screens

--- a/home/static/home/css/home.css
+++ b/home/static/home/css/home.css
@@ -35,7 +35,7 @@
     box-shadow: 0.5rem 0.5rem 0.5rem #191919;
     text-align: center;
     min-height: 25rem;
-    margin: 25vh auto auto auto;
+    margin: 7 auto auto auto;
 }
 
 .image-container {
@@ -212,6 +212,11 @@
 
 /* - - - Media queries - - - */
 @media (min-width: 576px) {
+/* - - - Landing page - - - */
+    #infocard {
+        margin: 25vh auto auto auto;
+    }
+
 /* - - - Gallery - - - */
     .carousel {
         height: 33rem;
